--- a/JS-learn-level-1/index.html
+++ b/JS-learn-level-1/index.html
@@ -5,10 +5,13 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/bootstrap.css" />
 </head>
 
-<body>
-    <script src="./1.data-types.js"></script>
+<body class="container">
+    <div class="page-header"> JS learn </div>
+    <div class="well"> Welcome to JS-world </div>
+    <script src="./recap/recap-1.js"></script>
 </body>
 
 </html>
