--- a/JS-learn-level-2/index.html
+++ b/JS-learn-level-2/index.html
@@ -11,7 +11,7 @@
         <div class="well">Welome to JS-world</div>
 
 
-        <script src="./4.arrow-function.js"></script>
+        <script src="./12.class-syntax.js"></script>
 
     </body>
 </html>
