--- a/JS-learn-level-1/index.html
+++ b/JS-learn-level-1/index.html
@@ -11,7 +11,7 @@
 <body class="container">
     <div class="page-header"> JS learn </div>
     <div class="well"> Welcome to JS-world </div>
-    <script src="./7.object-adv.js"></script>
+    <script src="./8.Array-methods.js"></script>
 </body>
 
 </html>
